--- a/_DataScienceEcosystem.ipynb
+++ b/_DataScienceEcosystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b77925e0",
+   "id": "ec679eb9",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -10,33 +10,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15508129",
+   "id": "addde9f2",
    "metadata": {},
    "source": [
-    "# In this notebook, Data Science Tools and Ecosystem are summarized."
+    "## In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b027c683",
+   "id": "6b4d36a8",
    "metadata": {},
    "source": [
-    "# Some of the popular languages that Data Scientists use are"
+    "### Some of the popular languages that Data Scientists use are"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8ca3434",
+   "id": "2a5877e2",
    "metadata": {},
    "source": [
     "1. Python\n",
     "2. R\n",
-    "3. Julia"
+    "3. SQL"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d5489551",
+   "id": "13f3f200",
    "metadata": {},
    "source": [
     "# Some of the commonly used libraries used by Data Scientists include:"
@@ -44,7 +44,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7fb6b1",
+   "id": "a7f839ff",
+   "metadata": {},
+   "source": [
+    "1. Pandas\n",
+    "2. Numpy\n",
+    "3. Scipy\n",
+    "4. ggplot2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a212a0f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0c4278",
    "metadata": {},
    "source": [
     "| Data Science Tools |\n",
@@ -56,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c26a99",
+   "id": "28a618ab",
    "metadata": {},
    "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python"
@@ -64,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "43f7983e",
+   "execution_count": 20,
+   "id": "66d9da15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c36fe1bf",
+   "execution_count": 21,
+   "id": "96ae3fe9",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +101,7 @@
        "17"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2b59b8b7",
+   "id": "2f993f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b69efae4",
+   "id": "375e7144",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccfcb508",
+   "id": "462c7bc8",
    "metadata": {},
    "source": [
     "***Objectives***\n",
@@ -139,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63be9fa",
+   "id": "82a812a9",
    "metadata": {},
    "source": [
     "## Author\n",
@@ -150,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974ae485",
+   "id": "d7ab9e68",
    "metadata": {},
    "outputs": [],
    "source": []
