--- a/_DataScienceEcosystem.ipynb
+++ b/_DataScienceEcosystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec679eb9",
+   "id": "dab6fa79",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addde9f2",
+   "id": "34d0d9ab",
    "metadata": {},
    "source": [
     "## In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b4d36a8",
+   "id": "8db97855",
    "metadata": {},
    "source": [
     "### Some of the popular languages that Data Scientists use are"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a5877e2",
+   "id": "e8b38b7c",
    "metadata": {},
    "source": [
     "1. Python\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13f3f200",
+   "id": "070501d8",
    "metadata": {},
    "source": [
     "# Some of the commonly used libraries used by Data Scientists include:"
@@ -44,36 +44,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f839ff",
+   "id": "7d2517de",
    "metadata": {},
    "source": [
     "1. Pandas\n",
     "2. Numpy\n",
-    "3. Scipy\n",
-    "4. ggplot2\n"
+    "3. ggplot2\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a212a0f",
+   "id": "4ff4a7a4",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0a0c4278",
+   "id": "43c36e6b",
    "metadata": {},
    "source": [
     "| Data Science Tools |\n",
     "-------------------------------\n",
-    "| R studio        |\n",
+    "| Anaconda       |\n",
     "| Jupyter notebook |\n",
-    "| Jupyter Lab      |"
+    "| Spyder      |"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28a618ab",
+   "id": "ec1c7ae1",
    "metadata": {},
    "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python"
@@ -82,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "66d9da15",
+   "id": "2dd7ec6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "96ae3fe9",
+   "id": "23794efb",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2f993f63",
+   "id": "cd727320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "375e7144",
+   "id": "9f63d0ee",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "462c7bc8",
+   "id": "ea98de71",
    "metadata": {},
    "source": [
     "***Objectives***\n",
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a812a9",
+   "id": "49cefbf6",
    "metadata": {},
    "source": [
     "## Author\n",
@@ -167,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ab9e68",
+   "id": "f6373e31",
    "metadata": {},
    "outputs": [],
    "source": []
